--- a/win_install_test.yml
+++ b/win_install_test.yml
@@ -4,7 +4,7 @@
   vars:
     mydir: 'C:\ansiblex'
   tasks:
-  - name: Download the 7-Zip package
-    win_get_url:
-      url: https://www.7-zip.org/a/7z2301-x64.exe
-      dest: 'C:\ansiblex'
+  - name: Ensure 7-Zip is installed through Chocolatey
+    win_chocolatey:
+      name: 7zip
+      state: present
